# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bykml"
version = "1.5.0"
description = "the bykml library"
readme = "README.md"
authors = [{ name = "Byron - Lloyd Wakeman", email = "lloydwakemanbyron@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "bykml", "tutorial"]
dependencies = [
    "xmltodict",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["bumpver"]
#
#[project.urls]
#Homepage = "https://github.com/realpython/bykml"

[project.scripts]
realpython = "bykml.__main__:main"

[tool.bumpver]
current_version = "1.5.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/bykml/__init__.py" = ["{version}"]

#[tool.bumpver]
#current_version = "1.5.0"
#version_pattern = "MAJOR.MINOR.PATCH"
#commit_message = "bump version {old_version} -> {new_version}"
#tag_message = "{new_version}"
#tag_scope = "default"
#pre_commit_hook = ""
#post_commit_hook = ""
#commit = true
#tag = true
#push = true
#
#[tool.bumpver.file_patterns]
#"pyproject.toml" = [
#    'current_version = "{version}"',
#]
#"README.md" = [
#    "{version}",
#    "{pep440_version}",
#]

